--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,13 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+/* Allows components to be placed horizontal to each other */
+.app-container {
+  display: flex;
+  height: 100vh;
+  width: 100%;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+/* Divider styling for the application */
+.divider {
+  width: 5px;
+  background-color: #00000061;
+  height: 100%;
 }
