Added Comment to a Styling

--- a/src/index.css
+++ b/src/index.css
@@ -21,5 +21,5 @@ html, body, #root {
   margin: 0;
   padding: 0;
   height: 100%;
-  overflow: hidden;
+  overflow: hidden;   /* NOTE: Its possible this can cause problems with drag and drop */
 }
