--- a/src/App.css
+++ b/src/App.css
@@ -21,10 +21,13 @@
   align-items: center;
 }
 
+/*
 .components-title {
 
 }
+*/
 
+/* Side Panel components/buttons styling */
 .icon-button {
   width: 80px;
   height: 60px;
@@ -38,6 +41,8 @@
   text-align: center;
 }
 
+/* Canvas styling */
 .canvas {
-
+  position: relative;
+  background-color: #4b1d1d;
 }
