--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,19 @@
 .app-container {
   display: flex;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
 }
 
 /* Side Panel styling */
 .side-panel {
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
   width: 130px;
+  height: 100%;
   background-color: #f2f2f2;
   align-items: center;
+  border: 2px solid red;
 }
 .side-panel h3 {
   font-size: 1.6rem;
@@ -44,6 +47,9 @@
 
 /* Canvas styling */
 .canvas {
+  flex: 1;
+  height: 100%;
   position: relative;
-  background-color: #4b1d1d;
+  overflow: hidden;
+  border: 2px solid lime;
 }
